force-app/main/default/objects/SMS_Message_PE__e/SMS_Message_PE__e.object-meta.xml
<CustomObject>
    <description>PE version of the sms messages.</description>
    <label>SMS Message</label>
    <pluralLabel>SMS Messages</pluralLabel>
</CustomObject>