force-app/main/default/objects/SMS_Message_PE__e/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>