force-app/main/default/objects/SMS_Message_PE__e/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>