force-app/main/default/objects/SMS_Message_PE__e/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <label>Received At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>